--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
 
     <header class="text-center text-light my-4">
-      <h1 class="mb-4">To-do List</h1>
+      <h1 class="mb-4">To-do List - Gabriel Merigo</h1>
       <form class="form-search">
         <input class="form-control m-auto" autofocus type="text" name="search" placeholder="Buscar to-do" autocomplete="off"/>
       </form>
